i entered the github link

--- a/clock.html
+++ b/clock.html
@@ -9,7 +9,7 @@
 <body>
     <h1>World Clock</h1>
     <footer>
-        This Project Is Coded By Samrawite And Is <a href="" target="_blank">Open Sourced On The Github</a>
+        This Project Is Coded By Samrawite And Is <a href="https://github.com/sambee-coding/world-clock-sambee.git" target="_blank">Open Sourced On The Github</a>
     </footer>
     <script src="index.js"></script>
 </body>
