--- a/clock.html
+++ b/clock.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>World Clock</h1>
-    <footer>
+    <footer data-netlify="true">
         This Project Is Coded By Samrawite And Is <a href="https://github.com/sambee-coding/world-clock-sambee.git" target="_blank">Open Sourced On The Github</a>
     </footer>
     <script src="index.js"></script>
