--- a/clock.html
+++ b/clock.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>World Clock - SAMBEE</title>
+    <title>World-Clock-SAMBEE</title>
      <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <header>
     <h1>World Clock</h1>
+    </header>
     <footer >
         This Project Is Coded By Samrawite And Is <a href="https://github.com/sambee-coding/world-clock-sambee.git" target="_blank">Open Sourced On The Github</a>
     </footer>
