--- a/clock.html
+++ b/clock.html
@@ -11,7 +11,7 @@
     <h1>World Clock</h1>
     </header>
     <footer >
-        This Project Is Coded By Samrawite And Is <a href="https://github.com/sambee-coding/world-clock-sambee.git">Open Sourced On The Github</a>
+        This Project Is Coded By Samrawite And Is <a href="#">Open Sourced On The Github</a>
     </footer>
     <script src="js/index.js"></script>
 </body>
