--- a/clock.html
+++ b/clock.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
       <header>
@@ -13,6 +13,6 @@
     <footer >
         <p>This Project Is Coded By Samrawite And Is <a href="#">Open Sourced On The Github</a></p>
     </footer>
-    <script src="js/index.js"></script>
+   <script src="index.js"></script>
 </body>
 </html>
