i added some files and properties

--- a/clock.html
+++ b/clock.html
@@ -10,6 +10,12 @@
       <header>
     <h1>World Clock</h1>
     </header>
+    <div class="contianer">
+        <form class="form">
+            <input type="text" placeholder="search for a city" required>
+            <input type="submit" value="search">
+        </form>
+    </div>
     <footer >
         <p>This Project Is Coded By Samrawite And Is <a href="#">Open Sourced On The Github</a></p>
     </footer>
