tiny tiney changes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </form>
     </div>
     <footer >
-        <p>This Project Is Coded By Samrawite And Is <a href="#">Open Sourced On The Github</a></p>
+        <p>This Project Is Coded By Samrawite And Is <a href="https://github.com/sambee-coding/world-clock-sambee.git">Open Sourced On The Github</a></p>
     </footer>
    <script src="index.js"></script>
 </body>
