--- a/index.html
+++ b/index.html
@@ -25,18 +25,18 @@
                 <div id="addis" class="boxies">
                         <div class="name-spot">
                           <h1>Addis</h1>
-                    <div class="date">augest 15</div>
+                    <div class="date"></div>
                     </div>
-                    <div class="time">11:20 <small>AM</small></div>
+                    <div class="time"><small></small></div>
                 </div>
                   <hr style="border: nine; border-top:2px dashed #333; margin: 20px 0; opacity: rgba(0,0,0,0.4);">
                   <div  id="paris" class="boxies">
                         <div class="name-spot">
             <h1>Paris</h1>
-                    <div class="date">augest 15</div>
+                    <div class="date"></div>
                     </div>
                    
-                    <div class="time">11:20<small>AM</small></div>
+                    <div class="time"><small></small></div>
                 </div>
                   <hr style="border: nine; border-top:2px dashed #333; margin: 20px 0;">
                   <div id="seoul" class="boxies">
