i ahve made changes on js

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         </div>
         <select id="options" class="selecting">
            <option value="">Select city</option>
-            <option value="">Addis Abeba</option>
-             <option value="">paris</option>
-              <option value="">Seoul</option>
-               <option value="">Tokyo</option>
+            <option value="Africa/Addis_Ababa">Addis Abeba</option>
+             <option value="Europe/Paris">paris</option>
+              <option value="Asia/Seoul">Seoul</option>
+               <option value="Asia/Tokyo">Tokyo</option>
         </select>
         <div class="city-boxes">
             <div class="city-boxes1">
