--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         </div>
         <select id="options" class="selecting">
            <option value="">Select city</option>
+            <option value="current">My current location</option>
             <option value="Africa/Addis_Ababa">Addis Abeba</option>
              <option value="Europe/Paris">paris</option>
               <option value="Asia/Seoul">Seoul</option>
